<?xml version="1.0"?>
<package format="3">
  <name>pid_control_ego_pkg</name>
  <version>0.1.0</version>
  <description>ROS2 port of the PID control node for position tracking.</description>

  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>angles</depend>
  <depend>quadrotor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
